Graph no longer used as scheme. All queries now require a graph. This is to separate live and draft entities.